--- a/assets/src/scss/component/listing-details/_review.scss
+++ b/assets/src/scss/component/listing-details/_review.scss
@@ -536,7 +536,7 @@
                 li {
                     padding: 4px;
 
-                    a {
+                    .page-numbers {
                         width: 40px;
                         height: 40px;
                         display: flex;
@@ -549,10 +549,8 @@
                         font-size: 14px;
                     }
 
-                    &.active {
-                        a {
-                            border-color: #090E30;
-                        }
+                    .page-numbers.current {
+                        border-color: #090E30;
                     }
                 }
             }
